# agentesboom2026

./: .gitignore  Agente1.md  Agente2.md  NEXT_STEPS.md  README.md  TEST_CREDENTIALS.md  conceptosbp.md  implementation_plan_autochat_fix.md  implementation_plan_journey_agent.md  implementation_plan_orchestrator_vis.md  project_rules.md  render.yaml
backend/: .env.example  .gitignore  README.md  alembic.ini  create_tables.py  create_test_user.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7574c14f57cf_initial_migration_users_accounts_stages.py  de942d2cc5d0_add_orchestrator_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agents/: __init__.py  atlas_agent.py  booms_agent.py  budgets_agent.py  canales_agent.py  journey_agent.py  ofertas_agent.py  planner_agent.py
backend/app/knowledge/: 100m_offers.txt  storybrand.txt
backend/app/models/: __init__.py  account.py  orchestrator_validation.py  stage.py  user.py
backend/app/prompts/: orchestrator-system.txt
backend/app/routers/: __init__.py  accounts.py  agents.py  auth.py  demo.py  exports.py  stages.py
backend/app/schemas/: __init__.py  account.py  stage.py  user.py
backend/app/services/: __init__.py  ai_provider_service.py  demo_profiles.py  demo_service.py  excel_service.py  google_service.py  openai_service.py  orchestrator_service.py  pdf_service.py  perplexity_service.py  rag_service.py  research_service.py
backend/app/utils/: __init__.py  security.py
docs/: features-summary.md  implementation-plan.md  (+2 more)
(+58 files in other folders)
